[package]
name = "lightarti-rest"
version = "0.4.5"
authors = [
    "Linus Gasser <linus.gasser@epfl.ch>",
    "Laurent Girod <laurent.girod@epfl.ch>",
    "Christian Grigis <christian.grigis@epfl.ch>",
    "Valérian Rousset <valerian.rousset@epfl.ch>",
]
edition = "2021"
license-file = "LICENSE"
description = "Simple wrapper around arti to enable mobile apps to make anonymous requests via Tor"
repository = "https://github.com/c4dt/lightarti-rest"
keywords = [
    "anonymity",
    "privacy",
    "tor",
]
categories = [
    "cryptography",
    "web-programming::http-client",
]

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
arti-client = { version = "0.10.2", default-features = false, features = [
    "error_detail",
    "experimental-api",
    "rustls",
    "tokio",
] }
tor-checkable = "0.5.5"
tor-circmgr = "0.11.0"
tor-config = "0.9.5"
tor-dirmgr = { version = "0.11.2", features = [
    "experimental-api",
    "static",
] }
tor-llcrypto = "0.5.5"
tor-netdir = "0.9.5"
tor-netdoc = { version = "0.9.0", features = [
    "experimental-api",
] }
tor-rtcompat = { version = "0.9.5", features = [
    "rustls",
    "tokio",
] }

anyhow = "1"
arkiv = { version = "0.7.0", features = ["tar", "gzip"] }
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
http = "0.2"
httparse = "1"
postage = { version = "0.5", default-features = false, features = [
    "futures-traits",
] }
rand = "0.8"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
signature = ">= 2.0, < 2.1" # https://github.com/dalek-cryptography/curve25519-dalek/blob/e6675c67ceadecc3e22b561296490f4b7de9ff39/ed25519-dalek/Cargo.toml#L31
tempfile = "3.8.1"
time = { version = "0.3.30", features = ["std"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
tracing = "0.1"
url = "2"
webpki-roots = "0.22"

[dev-dependencies]
tempdir = "0.3"
tracing-subscriber = "0.3"
tracing-log = "0.1"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.20"
android_logger = "0.11"
tracing = { version = "0.1", features = ["log"] }

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "s" # reduce library size
lto = "fat"     # use system linker (needed for iOS)
